--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,133 +14,144 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  -->
 
- <!DOCTYPE html>
- <html lang="en">
- 
- <head>
-   <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
-   <title>
-     RenderZone
-   </title>
-   <!--     Fonts and icons     -->
-   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
-   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-   <!-- Nucleo Icons -->
-   <link href="/static/assets/css/nucleo-icons.css" rel="stylesheet" />
-   <!-- CSS Files -->
-   <link href="/static/assets/css/blk-design-system.css?v=1.0.0" rel="stylesheet" />
- 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
- </head>
+<!DOCTYPE html>
+<html lang="en">
 
- 
- <body class="index-page">
-   <!-- Navbar -->
-   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="100">
-     <div class="container">
-       <div class="navbar-translate">
-         <a class="navbar-brand" alink="/" href="#">
-           RenderZone
-         </a>
-         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-           aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-bar bar1"></span>
-           <span class="navbar-toggler-bar bar2"></span>
-           <span class="navbar-toggler-bar bar3"></span>
-         </button>
-       </div>
-       <div class="collapse navbar-collapse justify-content-end" id="navigation">
-         <div class="navbar-collapse-header">
-           <div class="row">
-             <div class="col-6 collapse-brand">
-               <a>
-                 RenderZone
-               </a>
-             </div>
-             <div class="col-6 collapse-close text-right">
-               <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navigation"
-                 aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                 <i class="tim-icons icon-simple-remove"></i>
-               </button>
-             </div>
-           </div>
-         </div>
-         <ul class="navbar-nav">
-         </ul>
-       </div>
-     </div>
-   </nav>
-   <!-- End Navbar -->
-   <div class="wrapper">
-     {% block header %}
-     {% endblock %}
-     <div class="main " id="main">
-       {% block content %}
-       {% endblock %}
-     </div>
-     <div id="loaderGrid">
- 
-     </div>
-     {% if animation %}
-     <div id="fullFill"></div>
-     {% endif %}
-     <footer class="footer">
-       <div class="container">
-         <div class="row">
-           <div class="col-md-3">
-             <h1 class="title">RenderZone</h1>
-           </div>
-           <div class="col-md-3">
-             <ul class="nav">
-               <li class="nav-item">
-                 <a alink="/" href="#" class="nav-link">
-                   Home
-                 </a>
-               </li>
-               <li class="nav-item">
-                 <a alink="/browse" href="#" class="nav-link">
-                   Browse
-                 </a>
-               </li>
-             </ul>
-           </div>
-           <div class="col-md-3">
-             <ul class="nav">
-               <li class="nav-item">
-                 <a class="nav-link">
-                   Discord
-                 </a>
-               </li>
-               <li class="nav-item">
-                 <a href="#" class="nav-link">
-                   Blog
-                 </a>
-               </li>
-             </ul>
-           </div>
-         </div>
-       </div>
-     </footer>
-   </div>
-   <!--   Core JS Files   -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
-     integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
-     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-   <script src="/static/assets/js/core/jquery.min.js" type="text/javascript"></script>
-   <script src="/static/assets/js/core/popper.min.js" type="text/javascript"></script>
-   <script src="/static/assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-   <script src="/static/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-   <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-   <script src="/static/assets/js/plugins/bootstrap-switch.js"></script>
-   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-   <script src="/static/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-   <!-- Control Center for Black UI Kit: parallax effects, scripts for the example pages etc -->
-   <script src="/static/assets/js/blk-design-system.js?v=1.0.0" type="text/javascript"></script>
-   
-   {% block scripts %}
-   {% endblock %}
- </body>
- </html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
+  <title>
+    RenderZone
+  </title>
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <!-- Nucleo Icons -->
+  <link href="/static/assets/css/nucleo-icons.css" rel="stylesheet" />
+  <!-- CSS Files -->
+  <link href="/static/assets/css/blk-design-system.css?v=1.0.0" rel="stylesheet" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+</head>
+
+
+<body class="index-page">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="100">
+    <div class="container">
+      <div class="navbar-translate">
+        <a class="navbar-brand" alink="/" href="#">
+          RenderZone
+        </a>
+        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+          aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-bar bar1"></span>
+          <span class="navbar-toggler-bar bar2"></span>
+          <span class="navbar-toggler-bar bar3"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse justify-content-end" id="navigation">
+        <div class="navbar-collapse-header">
+          <div class="row">
+            <div class="col-6 collapse-brand">
+              <a>
+                RenderZone
+              </a>
+            </div>
+            <div class="col-6 collapse-close text-right">
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navigation"
+                aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="tim-icons icon-simple-remove"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <ul class="navbar-nav">
+          {% if session.get("admin") %}
+          <li class="nav-item">
+            <a class="nav-link" alink="/admin" href="#">
+              <i class="tim-icons icon-single-02"></i>
+              <p>Admin</p>
+            </a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
+  <div class="wrapper">
+    {% block header %}
+    {% endblock %}
+    <div class="main " id="main">
+      {% block content %}
+      {% endblock %}
+    </div>
+    <div id="loaderGrid">
+
+    </div>
+    {% if animation %}
+    <div id="fullFill"></div>
+    {% endif %}
+    {% if not nofooter %}
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h1 class="title">RenderZone</h1>
+          </div>
+          <div class="col-md-3">
+            <ul class="nav">
+              <li class="nav-item">
+                <a alink="/" href="#" class="nav-link">
+                  Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a alink="/browse" href="#" class="nav-link">
+                  Browse
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link">
+                  Discord
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  Blog
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    {% endif %}
+  </div>
+  <!--   Core JS Files   -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
+    integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="/static/assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="/static/assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="/static/assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="/static/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+  <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+  <script src="/static/assets/js/plugins/bootstrap-switch.js"></script>
+  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <script src="/static/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <!-- Control Center for Black UI Kit: parallax effects, scripts for the example pages etc -->
+  <script src="/static/assets/js/blk-design-system.js?v=1.0.0" type="text/javascript"></script>
+
+  {% block scripts %}
+  {% endblock %}
+</body>
+
+</html>
