--- a/app/templates/admin/edit_coupon.html.j2
+++ b/app/templates/admin/edit_coupon.html.j2
@@ -45,7 +45,7 @@
         <div class="card-footer">
             <button type="submit" class="btn btn-primary">Save</button>
             {% if "edit" in request.path %}
-            <a href="/admin/products/coupons/delete/{{ coupon.id }}" class="btn btn-danger">Delete</a> {% endif %}
+            <a href="/admin/products/coupons/delete/{{ code }}" class="btn btn-danger">Delete</a> {% endif %}
             <a href="/admin/products/coupons" class="btn btn-secondary float-right">Cancel</a>
         </div>
     </form>
