--- a/app/templates/generate.html
+++ b/app/templates/generate.html
@@ -25,11 +25,9 @@
                             <!-- slider -->
                             <input type="range" class="color-range d-block w-100" id="color" name="color" min="0" max="100" value="0">
                         </div>
-                        {% endif %}
-                        {% endfor %}
-                        <!-- background image upload -->
+                        {% elif product["attr"][a]["type"] == "file" %}
                         <div class="form-group">
-                            <label for="background">Background Image +$0.99 <a href="#" data-toggle="tooltip" data-placement="top" title="There is an additional charge if this option is filled out."><i class="fas fa-info-circle"></i></a></label>
+                            <label for="file-input-{{ a }}">{{ product["attr"][a]["name"] }} {% if product["attr"][a]["required"] %}<span class="text-danger">*</span>{% endif %} {% if product["attr"][a].get("cost", 0) > 0 %} +${{ product["attr"][a]["cost"] }} <a href="#" data-toggle="tooltip" data-placement="top" title="There is an additional charge if this option is filled out."><i class="fas fa-info-circle"></i></a>{% endif %}</label>
                             <span class="btn btn-primary btn-file d-block">
                                 <span new="background">Select file</span>
                                 <input type="file" id="background" name="background" accept="image/*">
@@ -38,6 +36,8 @@
                             <small class="form-text text-muted">Please use a 1:1 aspect ratio image. (Image or GIF)</small>
 
                         </div>
+                        {% endif %}
+                        {% endfor %}
                     </form>
                     <button class="btn btn-primary w-100" asubmit="#templateEdit">{{ "Generate" if product["price"] == 0 else "Proceed to checkout" }}</button>
                 </div>
