Patched /admin/jobs

--- a/app/templates/admin/jobs.html.j2
+++ b/app/templates/admin/jobs.html.j2
@@ -56,7 +56,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        {% if job.get("payment") %}
+        {% if job.get("paypal") %}
         <table class="table table-bordered table-striped mt-3">
             <thead>
                 <tr>
