--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,32 @@
   <link href="/static/assets/css/blk-design-system.css?v=1.0.0" rel="stylesheet" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- meta -->
+  <meta property="og:title" content="RenderZone">
+  <meta name="twitter:title" content="RenderZone">
+
+
+
+  <meta name="theme-color" content="#B400FF">
+
+
+
+
+  <meta name="og:image"
+    content="https://github.com/RenderZoneGH/branding/raw/main/logo-design/Logo%20700x700%20-%20Icon%20BG.png">
+  <meta name="twitter:image"
+    content="https://github.com/RenderZoneGH/branding/raw/main/logo-design/Logo%20700x700%20-%20Icon%20BG.png">
+
+
+
+
+  <meta property="og:description"
+    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that&#39;s both unique and professionally done. So why wait? Get started today and see the difference Re">
+  <meta name="description"
+    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that&#39;s both unique and professionally done. So why wait? Get started today and see the difference Re">
+  <meta property="twitter:description"
+    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that&#39;s both unique and professionally done. So why wait? Get started today and see the difference Re">
 </head>
 
 
