Shortened Discord embed description

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,11 +55,11 @@
 
 
   <meta property="og:description"
-    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that&#39;s both unique and professionally done. So why wait? Get started today and see the difference Re">
+    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that just looks amazing. Why wait? Get yourself a cool profile picture today!">
   <meta name="description"
-    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that&#39;s both unique and professionally done. So why wait? Get started today and see the difference Re">
+    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that just looks amazing. Why wait? Get yourself a cool profile picture today!">
   <meta property="twitter:description"
-    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that&#39;s both unique and professionally done. So why wait? Get started today and see the difference Re">
+    content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that just looks amazing. Why wait? Get yourself a cool profile picture today!">
 </head>
 
 
