Adsense! And new SEO friendly links.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,6 +60,8 @@
     content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that just looks amazing. Why wait? Get yourself a cool profile picture today!">
   <meta property="twitter:description"
     content="Looking for a quick and easy way to create an animated logo for social media? Look no further than RenderZone! With our free and paid options, you can create a logo that just looks amazing. Why wait? Get yourself a cool profile picture today!">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7031855537540147"
+    crossorigin="anonymous"></script>
 </head>
 
 
@@ -68,7 +70,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="100">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" alink="/" href="#">
+        <a class="navbar-brand" alink href="/">
           RenderZone
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
@@ -97,7 +99,7 @@
         <ul class="navbar-nav">
           {% if session.get("admin") %}
           <li class="nav-item">
-            <a class="nav-link" alink="/admin" href="#">
+            <a class="nav-link" alink href="/admin">
               <i class="tim-icons icon-single-02"></i>
               <p>Admin</p>
             </a>
@@ -131,12 +133,12 @@
           <div class="col-md-3">
             <ul class="nav">
               <li class="nav-item">
-                <a alink="/" href="#" class="nav-link">
+                <a alink href="/" class="nav-link">
                   Home
                 </a>
               </li>
               <li class="nav-item">
-                <a alink="/browse" href="#" class="nav-link">
+                <a alink href="/browse" class="nav-link">
                   Browse
                 </a>
               </li>
@@ -150,7 +152,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="." alink class="nav-link">
                   Blog
                 </a>
               </li>
