--- a/app/templates/generate.html
+++ b/app/templates/generate.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+
+{% include "hexToHue.html" %}
+
 <div class="container section">
     {% include "flash.html" %}
     <div class="row mx-auto">
@@ -15,15 +18,18 @@
                         <h4 class="card-title mb-3">Configure your order</h4>
                         {% for a in product["attr"].keys() %}
                         {% if product["attr"][a]["type"] == "text" %}
-                        <div class="form-group mb-3">
-                            <label for="text-input-{{ a }}">{{ product["attr"][a]["name"] }} {% if
-                                product["attr"][a]["required"] %}<span class="text-danger">*</span>{% endif %} {% if
-                                product["attr"][a].get("cost", 0) > 0 %} +${{ product["attr"][a]["cost"] }} <a href="#"
-                                    data-toggle="tooltip" data-placement="top"
-                                    title="There is an additional charge if this option is filled out."><i
-                                        class="fas fa-info-circle"></i></a>{% endif %}</label>
-                            <input type="text" id="templ-{{ a }}" name="templ-{{ a }}"
-                                value='{{ product["attr"][a]["value"] }}' class="form-control ">
+                        <div class="form-row">
+                            <div class="form-group col-10">
+                                <label for="text-input-{{ a }}">{{ product["attr"][a]["name"] }} {% if
+                                    product["attr"][a]["required"] %}<span class="text-danger">*</span>{% endif %} {% if
+                                    product["attr"][a].get("cost", 0) > 0 %} +${{ product["attr"][a]["cost"] }} <a
+                                        href="#" data-toggle="tooltip" data-placement="top"
+                                        title="There is an additional charge if this option is filled out."><i
+                                            class="fas fa-info-circle"></i></a>{% endif %}
+                                </label>
+                                <input type="text" id="templ-{{ a }}" name="templ-{{ a }}"
+                                    value='{{ product["attr"][a]["value"] }}' class="form-control ">
+                            </div>
                         </div>
                         {% elif product["attr"][a]["type"] == "color-slider" %}
                         <div class="form-group mb-3">
@@ -41,6 +47,11 @@
                                     <output class="c-range__output js-range-output" for="hue"></output>
                                 </div>
                             </div>
+                        </div>
+                        <div class="alert alert-info" role="alert">
+                            Need to use a HEX color? <a class="alert-link" href="#" data-toggle="modal"
+                                data-target="#hex2hue">Convert
+                                HEX to HUE</a>
                         </div>
                         {% elif product["attr"][a]["type"] == "file" %}
                         <div class="form-group">
@@ -119,6 +130,34 @@
         $(this).siblings('span[new]').hide();
 
     });
+
+</script>
+
+<script>
+    function hexToHue(hex) {
+        // Convert the HEX color value to an RGB array
+        let r = parseInt(hex.slice(1, 3), 16);
+        let g = parseInt(hex.slice(3, 5), 16);
+        let b = parseInt(hex.slice(5, 7), 16);
+
+        // Calculate the HUE degree value
+        let hue = Math.atan2(Math.sqrt(3) * (g - b), 2 * r - g - b) * 180 / Math.PI;
+
+        // Return the HUE degree value, normalized to a value between 0 and 360
+        return (hue + 360) % 360;
+    }
+
+    // We have no jQuery here.
+    // So we have to use the vanilla JS way to get the DOM element.
+    let hex = document.getElementById('hex');
+    let hue = document.getElementById('hue');
+    // Add an event listener to the HEX input field
+    hex.addEventListener('input', function () {
+        // Update the HUE input field with the calculated HUE degree value
+        hue.value = Math.round(hexToHue(hex.value));
+        setHue();
+    });
+
 
 </script>
 {% endblock %}
