We might need to get some special styles

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
   <link href="/static/assets/css/blk-design-system.css?v=1.0.0" rel="stylesheet" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+  {% block head %}{% endblock %}
   <!-- meta -->
   <meta property="og:title" content="RenderZone">
   <meta name="twitter:title" content="RenderZone">
