--- a/app/templates/hexToHue.html
+++ b/app/templates/hexToHue.html
@@ -18,6 +18,7 @@
                         <input type="color" class="form-control" id="hex" value="#000000">
                     </div>
                 </div>
+                <p>The conversion from HEX to HUE cannot be perfect due to the difference in the number of available colors. While HUE has a limited 360 colors, HEX has a much larger range with over 16 million different colors.</p>
             </div>
         </div>
     </div>
